feat(card): Adding the first design of the card view

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Steam time tracker</title>
+    <title>Steam Time Tracker</title>
   </head>
   <body>
     <div id="root"></div>
